--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "canvas": "^3.2.0",
         "discord.js": "^14.16.3",
         "dotenv": "^16.4.5",
+        "exceljs": "^4.4.0",
         "moment": "^2.30.1",
         "moment-timezone": "^0.6.0"
     },
