--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "dotenv": "^16.4.5",
         "exceljs": "^4.4.0",
         "moment": "^2.30.1",
-        "moment-timezone": "^0.6.0"
+        "moment-timezone": "^0.6.0",
+        "nanoid": "^5.1.6"
     },
     "devDependencies": {
         "@types/node": "^22.19.3",
